[package]
name = "cubism-core-glium-renderer"
version = "0.1.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2018"
repository = "https://github.com/Veykril/cubism-rs"
homepage = "https://github.com/Veykril/cubism-rs"
license = "MIT OR Apache-2.0"

[dependencies]
cubism-core = { path = "../cubism-core", version = "0.1.0" }
glium = "^0.25"
mint = "^0.5"