[package]
name = "cubism-core-piston2d-renderer"
version = "0.1.0"
authors = ["3c1u (Hikaru Terazono) <298748+3c1u@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubism-core = { path = "../cubism-core", version = "0.1.0" }
piston2d-graphics = "0.33.0"

[dev-dependencies]
cubism = { path = "../", version = "0.1.0" }
piston_window = "0.101.0"
piston = "0.49.0"
glium = "0.25.1"
piston2d-glium_graphics = "0.70.0"
pistoncore-sdl2_window = "0.63.0"

[[example]]
name = "haru"

[[example]]
name = "animate"

[[example]]
name = "ver4"
