[package]
name = "cubism-examples"
version = "0.1.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "testing"
path = "src/main.rs"

[dependencies]
cubism = { path = "..", version = "0.1.0" }
cubism-core-glium-renderer = { version = "0.1.0", path = "../cubism-core-glium-renderer"}

glium = "^0.25"
image = "^0.22"

imgui = "^0.2"
imgui-winit-support = "^0.2"
imgui-glium-renderer = "^0.2"